# tec_file_handler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_test
datasets/: dataset_for_testing.szplt
include/: tec_asciiFileHandling.h  tec_asciiFormat.h  tec_enumerations.h  tec_error.h  tec_exceptions.h  tec_fileContainer.h  tec_fileContent.h  tec_szlFileHandling.h  tec_variable.h  tec_zoneData.h  tec_zoneInformation.h
src/: tec_asciiFileHandling.cpp  tec_asciiFormat.cpp  tec_error.cpp  tec_exceptions.cpp  tec_fileContainer.cpp  tec_fileContent.cpp  tec_szlFileHandling.cpp  tec_variable.cpp  tec_zoneData.cpp  tec_zoneInformation.cpp
